--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "simple-typescript-template",
+  "name": "orderbook-manager",
   "version": "1.0.0",
-  "description": "A simple typescript project template.",
+  "description": "Fetch active order books from various services every second.",
   "main": "index.js",
   "scripts": {
     "start": "tsx ./src/index.ts"
