--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@1inch/fusion-sdk": "^2.4.4",
+    "@1inch/limit-order-sdk": "^5.2.3",
     "axios": "^1.13.2",
+    "dotenv": "^17.2.3",
     "winston": "^3.19.0",
     "winston-daily-rotate-file": "^5.0.0"
   }
